Modify access rules

--- a/project.config
+++ b/project.config
@@ -8,7 +8,7 @@
 	forgeCommitter = group git-numbering-bot
 	forgeCommitter = group v8-autoroll
 	push = group git-numbering-bot
-	push = +force group v8-autoroll
+	push = group v8-autoroll
 [access "refs/heads/*"]
 	create = group git-numbering-bot
 	create = group v8-autoroll
@@ -49,7 +49,7 @@
 	forgeCommitter = group v8-autoroll
 	push = group git-numbering-bot
 	push = group mdb/chrome-git-admins
-	push = +force group v8-autoroll
+	push = group v8-autoroll
 [access "refs/pending/*"]
 	create = group mdb/chrome-git-admins
 	create = group v8-autoroll
@@ -61,7 +61,7 @@
 	forgeCommitter = group v8-autoroll
 	push = group chrome-commit-bot
 	push = group mdb/chrome-git-admins
-	push = +force group v8-autoroll
+	push = group v8-autoroll
 	push = group v8-committers
 [access "refs/for/*"]
 	create = group mdb/chrome-git-admins
