allow tandrii to delete new branch.

--- a/project.config
+++ b/project.config
@@ -60,7 +60,7 @@
 	forgeCommitter = group mdb/chrome-git-admins
 	forgeCommitter = group v8-autoroll
 	push = group chrome-commit-bot
-	push = group mdb/chrome-git-admins
+	push = +force group mdb/chrome-git-admins
 	push = group v8-autoroll
 	push = group v8-committers
 [access "refs/for/*"]
