Modify access rules

--- a/project.config
+++ b/project.config
@@ -82,3 +82,8 @@
 	forgeAuthor = group v8-autoroll
 	forgeCommitter = group v8-autoroll
 	push = group v8-autoroll
+[access "refs/heads/canary"]
+	create = group v8-autoroll
+	forgeAuthor = group v8-autoroll
+	forgeCommitter = group v8-autoroll
+	push = group v8-autoroll
