--- a/project.config
+++ b/project.config
@@ -86,4 +86,4 @@
 	create = group v8-autoroll
 	forgeAuthor = group v8-autoroll
 	forgeCommitter = group v8-autoroll
-	push = +force group v8-autoroll
+	push = group v8-autoroll
