--- a/project.config
+++ b/project.config
@@ -1,6 +1,7 @@
 [access]
 	inheritFrom = v8
 [access "refs/branch-heads/*"]
+	create = group chromium-branch-creators
 	create = group git-numbering-bot
 	create = group v8-autoroll
 	forgeAuthor = group git-numbering-bot
@@ -10,6 +11,7 @@
 	push = group git-numbering-bot
 	push = group v8-autoroll
 [access "refs/heads/*"]
+	create = group chromium-branch-creators
 	create = group git-numbering-bot
 	create = group v8-autoroll
 	forgeAuthor = group git-numbering-bot
