--- a/config.json
+++ b/config.json
@@ -5,9 +5,8 @@
   "pending_ref_prefix": "refs/pending",
   "enabled_refglobs": [
     "refs/heads/master",
-    "refs/heads/candidates",
-    "refs/heads/*.*",
-    "refs/branch-heads/*",
+    "refs/heads/*.*.*",
+    "refs/branch-heads/*.*",
     "refs/internal/*"
   ]
 }
