--- a/project.config
+++ b/project.config
@@ -19,7 +19,7 @@
 	forgeCommitter = group git-numbering-bot
 	forgeCommitter = group v8-autoroll
 	push = group git-numbering-bot
-	push = group v8-autoroll
+	push = +force group v8-autoroll
 [access "refs/tags/*"]
 	create = group v8-autoroll
 	create = group v8-committers
@@ -51,7 +51,7 @@
 	forgeCommitter = group v8-autoroll
 	push = group git-numbering-bot
 	push = group mdb/chrome-git-admins
-	push = group v8-autoroll
+	push = +force group v8-autoroll
 [access "refs/pending/*"]
 	create = group mdb/chrome-git-admins
 	create = group v8-autoroll
