Add experimental playground ref.

--- a/config.json
+++ b/config.json
@@ -5,6 +5,7 @@
   "pending_ref_prefix": "refs/pending",
   "enabled_refglobs": [
     "refs/heads/master",
+    "refs/heads/playground",
     "refs/heads/*.*.*",
     "refs/branch-heads/*.*",
     "refs/internal/*"
