Add playground-merge ref.

--- a/project.config
+++ b/project.config
@@ -95,3 +95,6 @@
 	forgeCommitter = group v8-autoroll
 	push = group v8-autoroll
 	pushMerge = group v8-autoroll
+[access "refs/heads/playground-merge"]
+	create = group v8-autoroll
+	push = group v8-autoroll
