Temporarily add merge access to pending.

--- a/project.config
+++ b/project.config
@@ -64,6 +64,7 @@
 	push = group mdb/chrome-git-admins
 	push = group v8-autoroll
 	push = group v8-committers
+	pushMerge = group v8-autoroll
 [access "refs/for/*"]
 	create = group mdb/chrome-git-admins
 	forgeAuthor = group mdb/chrome-git-admins
