Modify access rules

--- a/project.config
+++ b/project.config
@@ -65,6 +65,7 @@
 	push = group v8-autoroll
 	push = group v8-committers
 	pushMerge = group v8-autoroll
+	exclusiveGroupPermissions = pushMerge
 [access "refs/for/*"]
 	create = group mdb/chrome-git-admins
 	forgeAuthor = group mdb/chrome-git-admins
