--- a/project.config
+++ b/project.config
@@ -62,7 +62,7 @@
 	forgeCommitter = group v8-autoroll
 	push = group chrome-commit-bot
 	push = group mdb/chrome-git-admins
-	push = group v8-autoroll
+	push = +force group v8-autoroll
 	push = group v8-committers
 	pushMerge = group v8-autoroll
 	exclusiveGroupPermissions = pushMerge
