Modify access rules

--- a/project.config
+++ b/project.config
@@ -71,6 +71,7 @@
 	forgeAuthor = group mdb/chrome-git-admins
 	forgeCommitter = group mdb/chrome-git-admins
 	push = +force group mdb/chrome-git-admins
+	pushMerge = group v8-autoroll
 [access "refs/heads/candidate"]
 	create = group v8-autoroll
 	forgeAuthor = group v8-autoroll
