--- a/project.config
+++ b/project.config
@@ -96,7 +96,7 @@
 	create = group v8-autoroll
 	forgeAuthor = group v8-autoroll
 	forgeCommitter = group v8-autoroll
-	push = group v8-autoroll
+	push = +force group v8-autoroll
 	pushMerge = group v8-autoroll
 [access "refs/heads/playground-merge"]
 	create = group v8-autoroll
