--- a/project.config
+++ b/project.config
@@ -62,16 +62,13 @@
 	forgeCommitter = group v8-autoroll
 	push = group chrome-commit-bot
 	push = group mdb/chrome-git-admins
-	push = +force group v8-autoroll
+	push = group v8-autoroll
 	push = group v8-committers
-	pushMerge = group v8-autoroll
-	exclusiveGroupPermissions = pushMerge
 [access "refs/for/*"]
 	create = group mdb/chrome-git-admins
 	forgeAuthor = group mdb/chrome-git-admins
 	forgeCommitter = group mdb/chrome-git-admins
 	push = +force group mdb/chrome-git-admins
-	pushMerge = group v8-autoroll
 [access "refs/heads/candidate"]
 	create = group v8-autoroll
 	forgeAuthor = group v8-autoroll
@@ -96,8 +93,7 @@
 	create = group v8-autoroll
 	forgeAuthor = group v8-autoroll
 	forgeCommitter = group v8-autoroll
-	push = +force group v8-autoroll
-	pushMerge = group v8-autoroll
+	push = group v8-autoroll
 [access "refs/heads/playground-merge"]
 	create = group v8-autoroll
 	push = group v8-autoroll
