--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,8 @@
 !/third_party/binutils
 !/third_party/eu-strip
 !/third_party/inspector_protocol
+!/third_party/colorama  # To track changes to README.v8 and LICENSE files.
+/third_party/colorama/src
 /tools/clang
 /tools/gcmole/gcmole-tools
 /tools/gcmole/gcmole-tools.tar.gz
