--- a/BUILD.gn
+++ b/BUILD.gn
@@ -2600,6 +2600,10 @@ v8_component("v8_libbase") {
       ]
     }
   } else if (is_fuchsia) {
+    sources -= [
+      "src/base/platform/platform-posix.cc",
+      "src/base/platform/platform-posix.h",
+    ]
     sources += [
       "src/base/debug/stack_trace_fuchsia.cc",
       "src/base/platform/platform-fuchsia.cc",
