--- a/buildbucket.config
+++ b/buildbucket.config
@@ -47,6 +47,7 @@
 	builder = v8_presubmit
 	builder = v8_win64_clang_compile_rel
 	builder = v8_win64_dbg
+	builder = v8_win64_msvc_compile_rel
 	builder = v8_win64_rel_ng
 	builder = v8_win_compile_dbg
 	builder = v8_win_dbg
