--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -2472,6 +2472,16 @@ buckets {
     }
 
     builders {
+      name: "v8_mac_arm64_ng"
+      dimensions: "os:Mac-10.13"
+      mixins: "goma-rbe-prod-default"
+      mixins: "release"
+      recipe {
+        properties_j: "triggers:[\"v8_mac_arm64_ng_triggered\"]"
+      }
+    }
+
+    builders {
       name: "v8_mac64_dbg_ng"
       dimensions: "os:Mac-10.13"
       mixins: "goma-rbe-prod-default"
@@ -2616,6 +2626,10 @@ buckets {
     }
     builders {
       name: "v8_mac64_rel_ng_triggered"
+      execution_timeout_secs: 7200  # 2h
+    }
+    builders {
+      name: "v8_mac_arm64_ng_triggered"
       execution_timeout_secs: 7200  # 2h
     }
     builders {
