[sandbox][x64] Access external pointer through a table
This change moves external pointers into a separate table datastructure
and turns external pointers in heap objects into indices into that
table.

This CL implements one of two possible ownership models for the table
entries. With this one, every heap objects owns its table entries. The
entries are allocated when the owning object is allocated and they are
freed when the object is garbage collected.

As such, setting external pointer fields does not require allocation of
table entries and the memory management of the table is simpler. On the
other hand, table indices cannot be shared between different objects and
table entries are allocated even when the external pointers are never
set (although for the common cases it should be possible to only
allocate table entries when they are needed).

This CL does not yet implement freeing of external pointer table entires
(this has to happen in object finalizers) and it also does not correctly
handle EmbedderDataSlots.

Bug: v8:10391
Change-Id: I4d37785295c25a7d1dcbc9871dd5887b9d788a4f

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -309,7 +309,7 @@ if (v8_enable_zone_compression == "") {
   v8_enable_zone_compression = false
 }
 if (v8_enable_heap_sandbox == "") {
-  v8_enable_heap_sandbox = false
+  v8_enable_heap_sandbox = v8_current_cpu == "x64"
 }
 if (v8_enable_single_generation == "") {
   v8_enable_single_generation = v8_disable_write_barriers
@@ -376,7 +376,7 @@ v8_toolset_for_shell = "host"
 #
 
 config("internal_config_base") {
- # Only targets in this file and its subdirs can depend on this.
+  # Only targets in this file and its subdirs can depend on this.
   visibility = [ "./*" ]
 
   configs = [ ":v8_tracing_config" ]
@@ -390,6 +390,7 @@ config("internal_config_base") {
 
 config("internal_config") {
   defines = []
+
   # Only targets in this file and its subdirs can depend on this.
   visibility = [ "./*" ]
 
@@ -2451,6 +2452,8 @@ v8_source_set("v8_base_without_compiler") {
     "src/execution/arguments.h",
     "src/execution/execution.cc",
     "src/execution/execution.h",
+    "src/execution/external-pointer-table.cc",
+    "src/execution/external-pointer-table.h",
     "src/execution/frame-constants.h",
     "src/execution/frames-inl.h",
     "src/execution/frames.cc",
