[cpu-profiler] Add stats to track missing or unnattributed frames
This adds a global counter for the various reasons we might fail to
attribute a tick.

The counters are cleared and printed when Profile::Print() is called,
which we call in our tests, so flaky test output will now contain these
stats along with the printed profile tree.

Drive-by cleanup some print functions and make them const.

Change-Id: Ia3a27405f5b5346adfdbb32afc7e414857969cc5

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -376,7 +376,7 @@ v8_toolset_for_shell = "host"
 #
 
 config("internal_config_base") {
- # Only targets in this file and its subdirs can depend on this.
+  # Only targets in this file and its subdirs can depend on this.
   visibility = [ "./*" ]
 
   configs = [ ":v8_tracing_config" ]
@@ -390,6 +390,7 @@ config("internal_config_base") {
 
 config("internal_config") {
   defines = []
+
   # Only targets in this file and its subdirs can depend on this.
   visibility = [ "./*" ]
 
@@ -3052,6 +3053,8 @@ v8_source_set("v8_base_without_compiler") {
     "src/profiler/profile-generator.h",
     "src/profiler/profiler-listener.cc",
     "src/profiler/profiler-listener.h",
+    "src/profiler/profiler-stats.cc",
+    "src/profiler/profiler-stats.h",
     "src/profiler/sampling-heap-profiler.cc",
     "src/profiler/sampling-heap-profiler.h",
     "src/profiler/strings-storage.cc",
