--- a/BUILD.gn
+++ b/BUILD.gn
@@ -379,7 +379,7 @@ v8_toolset_for_shell = "host"
 #
 
 config("internal_config_base") {
- # Only targets in this file and its subdirs can depend on this.
+  # Only targets in this file and its subdirs can depend on this.
   visibility = [ "./*" ]
 
   configs = [ ":v8_tracing_config" ]
@@ -393,6 +393,7 @@ config("internal_config_base") {
 
 config("internal_config") {
   defines = []
+
   # Only targets in this file and its subdirs can depend on this.
   visibility = [ "./*" ]
 
@@ -590,6 +591,9 @@ config("features") {
   }
   if (v8_enable_single_generation) {
     defines += [ "V8_ENABLE_SINGLE_GENERATION" ]
+  }
+  if (v8_enable_conservative_stack_scanning) {
+    defines += [ "V8_ENABLE_CONSERVATIVE_STACK_SCANNING" ]
   }
   if (v8_disable_write_barriers) {
     defines += [ "V8_DISABLE_WRITE_BARRIERS" ]
@@ -3350,6 +3354,10 @@ v8_source_set("v8_base_without_compiler") {
     sources += v8_third_party_heap_files
   } else {
     sources += [ "src/heap/third-party/heap-api-stub.cc" ]
+  }
+
+  if (v8_enable_conservative_stack_scanning) {
+    sources += [ "src/heap/object-start-bitmap.h" ]
   }
 
   if (v8_enable_wasm_gdb_remote_debugging) {
