--- a/BUILD.gn
+++ b/BUILD.gn
@@ -3698,6 +3698,7 @@ v8_source_set("v8_base_without_compiler") {
   deps = [
     ":cppgc_base",
     ":torque_generated_definitions",
+    ":v8_cppgc_shared",
     ":v8_headers",
     ":v8_libbase",
     ":v8_libsampler",
