--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1039,7 +1039,7 @@ action("postmortem-metadata") {
 
   # NOSORT
   sources = [
-    "$target_gen_dir/torque-generated/instance-types-tq.h",
+    "$target_gen_dir/torque-generated/instance-types.h",
     "src/objects/allocation-site.h",
     "src/objects/allocation-site-inl.h",
     "src/objects/cell.h",
@@ -1318,30 +1318,30 @@ template("run_torque") {
     destination_folder = "$target_gen_dir/torque-generated$suffix"
 
     files = [
-      "bit-fields-tq.h",
-      "builtin-definitions-tq.h",
-      "interface-descriptors-tq.inc",
+      "bit-fields.h",
+      "builtin-definitions.h",
+      "interface-descriptors.inc",
       "factory-tq.cc",
       "factory-tq.inc",
-      "field-offsets-tq.h",
-      "class-verifiers-tq.cc",
-      "class-verifiers-tq.h",
-      "enum-verifiers-tq.cc",
-      "objects-printer-tq.cc",
-      "objects-body-descriptors-tq-inl.inc",
-      "class-definitions-tq.cc",
-      "class-definitions-tq-inl.h",
-      "class-definitions-tq.h",
-      "class-debug-readers-tq.cc",
-      "class-debug-readers-tq.h",
-      "exported-macros-assembler-tq.cc",
-      "exported-macros-assembler-tq.h",
-      "csa-types-tq.h",
-      "instance-types-tq.h",
-      "internal-class-definitions-tq.h",
-      "internal-class-definitions-tq-inl.h",
-      "exported-class-definitions-tq.h",
-      "exported-class-definitions-tq-inl.h",
+      "field-offsets.h",
+      "class-verifiers.cc",
+      "class-verifiers.h",
+      "enum-verifiers.cc",
+      "objects-printer.cc",
+      "objects-body-descriptors-inl.inc",
+      "class-definitions.cc",
+      "class-definitions-inl.h",
+      "class-definitions.h",
+      "class-debug-readers.cc",
+      "class-debug-readers.h",
+      "exported-macros-assembler.cc",
+      "exported-macros-assembler.h",
+      "csa-types.h",
+      "instance-types.h",
+      "internal-class-definitions.h",
+      "internal-class-definitions-inl.h",
+      "exported-class-definitions.h",
+      "exported-class-definitions-inl.h",
     ]
 
     outputs = []
@@ -1422,10 +1422,10 @@ v8_source_set("torque_generated_initializers") {
   public_deps = [ ":v8_maybe_icu" ]
 
   sources = [
-    "$target_gen_dir/torque-generated/csa-types-tq.h",
-    "$target_gen_dir/torque-generated/enum-verifiers-tq.cc",
-    "$target_gen_dir/torque-generated/exported-macros-assembler-tq.cc",
-    "$target_gen_dir/torque-generated/exported-macros-assembler-tq.h",
+    "$target_gen_dir/torque-generated/csa-types.h",
+    "$target_gen_dir/torque-generated/enum-verifiers.cc",
+    "$target_gen_dir/torque-generated/exported-macros-assembler.cc",
+    "$target_gen_dir/torque-generated/exported-macros-assembler.h",
     "src/torque/runtime-support.h",
   ]
   foreach(file, torque_files) {
@@ -1451,11 +1451,11 @@ v8_source_set("torque_generated_definitions") {
   public_deps = [ ":v8_maybe_icu" ]
 
   sources = [
-    "$target_gen_dir/torque-generated/class-definitions-tq.cc",
-    "$target_gen_dir/torque-generated/class-verifiers-tq.cc",
-    "$target_gen_dir/torque-generated/class-verifiers-tq.h",
+    "$target_gen_dir/torque-generated/class-definitions.cc",
+    "$target_gen_dir/torque-generated/class-verifiers.cc",
+    "$target_gen_dir/torque-generated/class-verifiers.h",
     "$target_gen_dir/torque-generated/factory-tq.cc",
-    "$target_gen_dir/torque-generated/objects-printer-tq.cc",
+    "$target_gen_dir/torque-generated/objects-printer.cc",
   ]
 
   configs = [ ":internal_config" ]
