--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4329,6 +4329,8 @@ v8_source_set("cppgc_base") {
     "include/cppgc/visitor.h",
     "include/v8config.h",
     "src/heap/cppgc/allocation.cc",
+    "src/heap/cppgc/concurrent-marker.cc",
+    "src/heap/cppgc/concurrent-marker.h",
     "src/heap/cppgc/default-job.h",
     "src/heap/cppgc/default-platform.cc",
     "src/heap/cppgc/free-list.cc",
@@ -4357,6 +4359,7 @@ v8_source_set("cppgc_base") {
     "src/heap/cppgc/liveness-broker.cc",
     "src/heap/cppgc/liveness-broker.h",
     "src/heap/cppgc/logging.cc",
+    "src/heap/cppgc/marker-utils.h",
     "src/heap/cppgc/marker.cc",
     "src/heap/cppgc/marker.h",
     "src/heap/cppgc/marking-state.cc",
