--- a/test/mjsunit/BUILD.gn
+++ b/test/mjsunit/BUILD.gn
@@ -15,16 +15,16 @@ group("v8_mjsunit") {
     "../../tools/clusterfuzz/v8_mock.js",
     "../../tools/clusterfuzz/v8_mock_archs.js",
     "../../tools/clusterfuzz/v8_mock_webassembly.js",
-    "../../tools/codemap.js",
-    "../../tools/consarray.js",
-    "../../tools/csvparser.js",
-    "../../tools/logreader.js",
-    "../../tools/arguments.js",
-    "../../tools/profile.js",
-    "../../tools/profile_view.js",
+    "../../tools/codemap.mjs",
+    "../../tools/consarray.mjs",
+    "../../tools/csvparser.mjs",
+    "../../tools/logreader.mjs",
+    "../../tools/arguments.mjs",
+    "../../tools/profile.mjs",
+    "../../tools/profile_view.mjs",
     "../../tools/profviz/composer.js",
-    "../../tools/splaytree.js",
-    "../../tools/tickprocessor.js",
-    "../../tools/dumpcpp.js",
+    "../../tools/splaytree.mjs",
+    "../../tools/tickprocessor.mjs",
+    "../../tools/dumpcpp.mjs",
   ]
 }
