[test][tools] Add test for timline.mjs
Bug: v8:10668
Change-Id: I51f81a66408a4b262f9ac7e6421609c5e485f779

--- a/test/mjsunit/BUILD.gn
+++ b/test/mjsunit/BUILD.gn
@@ -12,18 +12,20 @@ group("v8_mjsunit") {
 
   data = [
     "./",
+    "../../tools/arguments.js",
     "../../tools/clusterfuzz/v8_mock.js",
     "../../tools/clusterfuzz/v8_mock_archs.js",
     "../../tools/clusterfuzz/v8_mock_webassembly.js",
     "../../tools/codemap.js",
     "../../tools/consarray.js",
     "../../tools/csvparser.js",
+    "../../tools/dumpcpp.js",
     "../../tools/logreader.js",
-    "../../tools/arguments.js",
     "../../tools/profile.js",
     "../../tools/profile_view.js",
     "../../tools/splaytree.js",
+    "../../tools/system-analyzer/log/log.mjs",
+    "../../tools/system-analyzer/timeline.mjs",
     "../../tools/tickprocessor.js",
-    "../../tools/dumpcpp.js",
   ]
 }
