--- a/test/unittests/BUILD.gn
+++ b/test/unittests/BUILD.gn
@@ -40,7 +40,10 @@ v8_executable("v8_cppgc_shared_unittests") {
 v8_source_set("v8_cppgc_shared_unittests_sources") {
   testonly = true
 
-  sources = [ "heap/base/worklist-unittest.cc" ]
+  sources = [
+    "heap/base/queryable-worklist-unittest.cc",
+    "heap/base/worklist-unittest.cc",
+  ]
 
   configs = [
     "../..:external_config",
