[build] Add -ffp-contract=off to cflags for arm64
This was removed in Chromium build configs in https://crrev.com/c/3414864,
but a few V8 relaxed SIMD tests still depend on it.

Also remove skips of those tests.

Bug: v8:12588
Change-Id: Ibda661fca9c19e1f0a8ad29adc1d4b4a704720cd

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1032,6 +1032,10 @@ config("toolchain") {
         asmflags = [ "-mbranch-protection=pac-ret" ]
       }
     }
+
+    # TODO(adamk): Remove this flag once relaxed SIMD tests pass without it.
+    # See https://crbug.com/v8/12588.
+    cflags += [ "-ffp-contract=off" ]
   }
 
   # Mips64el/mipsel simulators.
