[compiler] prototype of TurboShaft CFG-IR second version
Change-Id: I0bea7e7428b6d9206237a341554c74c2ad5cb46c

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2120,6 +2120,7 @@ filegroup(
             "src/compiler/backend/x64/instruction-selector-x64.cc",
             "src/compiler/backend/x64/unwinding-info-writer-x64.cc",
             "src/compiler/backend/x64/unwinding-info-writer-x64.h",
+            "src/compiler/turboshaft/select-instructions-x64.cc",
             "src/deoptimizer/x64/deoptimizer-x64.cc",
             "src/diagnostics/x64/disasm-x64.cc",
             "src/diagnostics/x64/eh-frame-x64.cc",
@@ -2699,6 +2700,19 @@ filegroup(
         "src/compiler/state-values-utils.h",
         "src/compiler/store-store-elimination.cc",
         "src/compiler/store-store-elimination.h",
+        "src/compiler/turboshaft/cfg.cc",
+        "src/compiler/turboshaft/cfg.h",
+        "src/compiler/turboshaft/graph-builder.cc",
+        "src/compiler/turboshaft/graph-builder.h",
+        "src/compiler/turboshaft/instrusive-priority-queue.h",
+        "src/compiler/turboshaft/operations.cc",
+        "src/compiler/turboshaft/operations.h",
+        "src/compiler/turboshaft/operation-matchers.h",
+        "src/compiler/turboshaft/recreate-schedule.cc",
+        "src/compiler/turboshaft/recreate-schedule.h",
+        "src/compiler/turboshaft/reducer.h",
+        "src/compiler/turboshaft/select-instructions-inl.h",
+        "src/compiler/turboshaft/select-instructions.h",
         "src/compiler/type-cache.cc",
         "src/compiler/type-cache.h",
         "src/compiler/type-narrowing-reducer.cc",
