Prototype DisplayNamesProvider hook
Bug: 1097432
Change-Id: Iecc222f1f22aac51cbb7b8022307974d1edd43a9

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -444,6 +444,7 @@ filegroup(
         "include/v8-data.h",
         "include/v8-date.h",
         "include/v8-debug.h",
+        "include/v8-display-names.h",
         "include/v8-embedder-heap.h",
         "include/v8-embedder-state-scope.h",
         "include/v8-exception.h",
