--- a/BUILD.gn
+++ b/BUILD.gn
@@ -2527,6 +2527,7 @@ v8_header_set("v8_headers") {
     "include/v8-data.h",
     "include/v8-date.h",
     "include/v8-debug.h",
+    "include/v8-display-names.h",
     "include/v8-embedder-heap.h",
     "include/v8-embedder-state-scope.h",
     "include/v8-exception.h",
