--- a/BUILD.gn
+++ b/BUILD.gn
@@ -215,6 +215,10 @@ declare_args() {
   #    in step 3 or 4.
   v8_builtins_profiling_log_file = "default"
 
+  # Enable extended instruction set for builtins.
+  # Sets -dV8_BUILTINS_INSTRUCTION_SET_EXTENSION
+  v8_enable_builtins_instruction_set_extension = false
+
   # Enables various testing features.
   v8_enable_test_features = ""
 
@@ -549,11 +553,10 @@ if (v8_enable_sparkplug == "") {
   v8_enable_sparkplug = !v8_jitless
 }
 if (v8_enable_maglev == "") {
-  v8_enable_maglev =
-      v8_enable_turbofan &&
-      (v8_current_cpu == "arm" || v8_current_cpu == "x64" ||
-       v8_current_cpu == "arm64" || v8_current_cpu == "s390x" ||
-       v8_current_cpu == "riscv64")
+  v8_enable_maglev = v8_enable_turbofan &&
+                     (v8_current_cpu == "arm" || v8_current_cpu == "x64" ||
+                      v8_current_cpu == "arm64" || v8_current_cpu == "s390x" ||
+                      v8_current_cpu == "riscv64")
 }
 assert(v8_enable_turbofan || !v8_enable_maglev,
        "Maglev is not available when Turbofan is disabled.")
@@ -1238,6 +1241,9 @@ config("features") {
   }
   if (v8_enable_fuzztest) {
     defines += [ "V8_ENABLE_FUZZTEST" ]
+  }
+  if (v8_enable_builtins_instruction_set_extension) {
+    defines += [ "V8_BUILTINS_INSTRUCTION_SET_EXTENSION" ]
   }
   if (v8_enable_short_builtin_calls) {
     defines += [ "V8_SHORT_BUILTIN_CALLS" ]
