--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -992,6 +992,7 @@ filegroup(
         "src/builtins/conversion.tq",
         "src/builtins/convert.tq",
         "src/builtins/data-view.tq",
+        "src/builtins/decorators.tq",
         "src/builtins/finalization-registry.tq",
         "src/builtins/frame-arguments.tq",
         "src/builtins/frames.tq",
@@ -1338,6 +1339,7 @@ filegroup(
         "src/builtins/builtins-constructor.h",
         "src/builtins/builtins-dataview.cc",
         "src/builtins/builtins-date.cc",
+        "src/builtins/builtins-decorators.h",
         "src/builtins/builtins-definitions.h",
         "src/builtins/builtins-descriptors.h",
         "src/builtins/builtins-disposable-stack.cc",
