--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1989,6 +1989,7 @@ torque_files = [
   "src/builtins/convert.tq",
   "src/builtins/console.tq",
   "src/builtins/data-view.tq",
+  "src/builtins/decorators.tq",
   "src/builtins/finalization-registry.tq",
   "src/builtins/frames.tq",
   "src/builtins/frame-arguments.tq",
@@ -3365,6 +3366,7 @@ v8_header_set("v8_internal_headers") {
     "src/baseline/bytecode-offset-iterator.h",
     "src/builtins/accessors.h",
     "src/builtins/builtins-constructor.h",
+    "src/builtins/builtins-decorators.h",
     "src/builtins/builtins-definitions.h",
     "src/builtins/builtins-descriptors.h",
     "src/builtins/builtins-inl.h",
