--- a/BUILD.gn
+++ b/BUILD.gn
@@ -5518,6 +5518,7 @@ v8_source_set("v8_base_without_compiler") {
     "src/heap/heap-verifier.cc",
     "src/heap/heap-write-barrier.cc",
     "src/heap/heap.cc",
+    "src/heap/cache-model.cc",
     "src/heap/incremental-marking-job.cc",
     "src/heap/incremental-marking.cc",
     "src/heap/index-generator.cc",
