Compare thread-local with GetIsolateFromWritableObject
Bug: 336738728
Change-Id: I2fcb1518152335abe7263a65e4f9348e47a03b0a

--- a/test/benchmarks/cpp/BUILD.gn
+++ b/test/benchmarks/cpp/BUILD.gn
@@ -63,4 +63,22 @@ if (v8_enable_google_benchmark) {
       "//third_party/google_benchmark_chrome:google_benchmark",
     ]
   }
+
+  v8_executable("isolate_getter_benchmark") {
+    testonly = true
+
+    configs = []
+
+    sources = [
+      "benchmark-main.cc",
+      "benchmark-utils.cc",
+      "benchmark-utils.h",
+      "isolate-getter.cc",
+    ]
+
+    deps = [
+      "//:v8",
+      "//third_party/google_benchmark_chrome:google_benchmark",
+    ]
+  }
 }
